--- a/index.html
+++ b/index.html
@@ -368,6 +368,7 @@
                       type="text"
                       value=${formValue}
                       onChange=${formValueChanged}
+                      disabled=${ctaDisabled}
                       class="flex-grow p-2 border border-gray-300 rounded-l-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
                     />
                     <button
