--- a/index.html
+++ b/index.html
@@ -270,10 +270,19 @@
 
           const toggleClickability = () => {
             setCtaDisabled(!ctaDisabled);
+            toggleFullScreen();
           };
 
           const goToHistory = () => {
             window.location.href = "/chatlog/history.html";
+          };
+
+          const toggleFullScreen = () => {
+            if (!document.fullscreenElement) {
+              document.documentElement.requestFullscreen();
+            } else if (document.exitFullscreen) {
+              document.exitFullscreen();
+            }
           };
 
           if (isAuthenticated) {
