--- a/history.html
+++ b/history.html
@@ -95,7 +95,11 @@
             if (entries.length === 0) return;
             const entry = entries.find((entry) => entry.fileName === file);
             const response = await axios.get(entry.url);
-            setSelectedFileEntries(response.data);
+            fileEntries =
+              typeof response.data == "string"
+                ? JSON.parse(response.data)
+                : response.data;
+            setSelectedFileEntries(fileEntries);
           };
 
           const getGist = async () => {
