--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
       import { Octokit } from "./assets/octokit.mjs";
       (() => {
         const Index = () => {
+          const [isModalOpen, setIsModalOpen] = React.useState(true);
           const html = htm.bind(React.createElement);
           const [octokit, setOctokit] = React.useState(null);
+          const [password, setPassword] = React.useState("");
           const [isRecording, setIsRecording] = React.useState(false);
           const [isAuthenticated, setIsAuthenticated] = React.useState(false);
           const [ctaDisabled, setCtaDisabled] = React.useState(false);
-          const [authenticationStep, setAuthenticationStep] =
-            React.useState(false);
           const [stopRecording, setStopRecording] = React.useState(false);
           const [isRecordingInitialized, setIsRecordingInitialized] =
             React.useState(false);
@@ -47,20 +47,11 @@
             "U2FsdGVkX1/bKV8wcsuNaGYJCCFwoQszOu2SG8dQma7ra910OBWMhYz1LU3Irr+Ia+HQ6xar+gulVBLc0s9Smc0ImlsaTx+tbdls0/V0ZMd7f/2XSOow6I1qj2kwXmSdiPyLskXL/mK64TT/pi9ozw==";
           const stopRecordingRef = React.useRef(null);
           stopRecordingRef.current = stopRecording;
+          const inputRef = React.useRef(null);
 
           React.useEffect(() => {
-            let password = prompt("Please enter password:", "");
-            setIsAuthenticated(validPassword(password));
-          }, []);
-
-          React.useEffect(() => {
-            setAuthenticationStep(true);
-          }, [isAuthenticated]);
-
-          const validPassword = (password) => {
-            if (!password) return false;
-            return MD5(password) == "ca215396be47f0f615479fc977f50170";
-          };
+            inputRef.current?.focus();
+          }, [inputRef.current]);
 
           React.useEffect(() => {
             (async () => {
@@ -280,6 +271,19 @@
             window.location.href = "/chatlog/history.html";
           };
 
+          const passwordChange = (e) => {
+            setPassword(e.target.value);
+          };
+
+          const submitPassword = () => {
+            setIsAuthenticated(validPassword(password));
+          };
+
+          const validPassword = (password) => {
+            if (!password) return false;
+            return MD5(password) == "ca215396be47f0f615479fc977f50170";
+          };
+
           if (isAuthenticated) {
             return html`
               <section class="container mx-auto">
@@ -387,7 +391,37 @@
               </section>
             `;
           } else {
-            return authenticationStep ? html`<div>Wrong Password</div>` : "";
+            return html`
+              <div>
+                <div
+                  class=${`fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center ${
+                    !isModalOpen && "hidden"
+                  }`}
+                >
+                  <div class="bg-white px-12 py-6 rounded shadow-lg w-1/4">
+                    <p class="mb-4">Enter Password</p>
+                    <div class="flex mb-4">
+                      <form onSubmit=${submitPassword}>
+                        <input
+                          ref=${inputRef}
+                          type="password"
+                          value=${password}
+                          onChange=${passwordChange}
+                          class="p-2 border border-gray-300 rounded"
+                        />
+                        <button
+                          type="submit"
+                          onClick=${submitPassword}
+                          class="bg-green-500 text-white px-4 py-2 rounded"
+                        >
+                          Submit
+                        </button>
+                      </form>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            `;
           }
         };
         ReactDOM.render(
