--- a/history.html
+++ b/history.html
@@ -231,7 +231,7 @@
                     !isModalOpen && "hidden"
                   }`}
                 >
-                  <div class="bg-white px-12 py-6 rounded shadow-lg w-1/4">
+                  <div class="bg-white px-12 py-6 rounded shadow-lg md:w-1/4">
                     <p class="mb-4">Enter Password</p>
                     <div class="flex mb-4">
                       <form onSubmit=${submitPassword}>
