--- a/history.html
+++ b/history.html
@@ -240,7 +240,7 @@
                           type="password"
                           value=${password}
                           onChange=${passwordChange}
-                          class="p-2 border border-gray-300 rounded"
+                          class="p-2 border border-gray-300 rounded focus:outline-none"
                         />
                         <button
                           type="submit"
