--- a/index.html
+++ b/index.html
@@ -407,8 +407,7 @@
                           type="password"
                           value=${password}
                           onChange=${passwordChange}
-                          class="p-2 border border-gray-300 rounded"
-                          autofocus
+                          class="p-2 border border-gray-300 rounded focus:outline-none"
                         />
                         <button
                           type="submit"
