--- a/history.html
+++ b/history.html
@@ -15,7 +15,6 @@
       (() => {
         const Index = () => {
           const html = htm.bind(React.createElement);
-          const [isModalOpen, setIsModalOpen] = React.useState(true);
           const [password, setPassword] = React.useState("");
           const [octokit, setOctokit] = React.useState(null);
           const [entries, setEntries] = React.useState([]);
@@ -227,9 +226,7 @@
             return html`
               <div>
                 <div
-                  class=${`fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center ${
-                    !isModalOpen && "hidden"
-                  }`}
+                  class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center"
                 >
                   <div class="bg-white px-12 py-6 rounded shadow-lg lg:w-1/4">
                     <p class="mb-4">Enter Password</p>
