--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
       import { Octokit } from "./assets/octokit.mjs";
       (() => {
         const Index = () => {
-          const [isModalOpen, setIsModalOpen] = React.useState(true);
           const html = htm.bind(React.createElement);
           const [octokit, setOctokit] = React.useState(null);
           const [password, setPassword] = React.useState("");
@@ -395,9 +394,7 @@
             return html`
               <div>
                 <div
-                  class=${`fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center ${
-                    !isModalOpen && "hidden"
-                  }`}
+                  class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center"
                 >
                   <div class="bg-white px-12 py-6 rounded shadow-lg lg:w-1/4">
                     <p class="mb-4">Enter Password</p>
