--- a/index.html
+++ b/index.html
@@ -371,26 +371,27 @@
                       `
                     )}
                 </ul>
-                <div
-                  class="fixed bottom-0 left-0 w-full bg-white border-t border-gray-200 p-4"
-                >
-                  <div class="flex items-center">
-                    <input
-                      type="text"
-                      value=${formValue}
-                      onChange=${formValueChanged}
-                      disabled=${ctaDisabled}
-                      class="flex-grow p-2 border border-gray-300 rounded-l-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
-                    />
-                    <button
-                      onClick=${submitForm}
-                      disabled=${ctaDisabled}
-                      class="p-2 bg-blue-500 text-white rounded-r-md hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50"
-                    >
-                      Submit
-                    </button>
+                ${!ctaDisabled &&
+                html`
+                  <div
+                    class="fixed bottom-0 left-0 w-full bg-white border-t border-gray-200 p-4"
+                  >
+                    <div class="flex items-center">
+                      <input
+                        type="text"
+                        value=${formValue}
+                        onChange=${formValueChanged}
+                        class="flex-grow p-2 border border-gray-300 rounded-l-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
+                      />
+                      <button
+                        onClick=${submitForm}
+                        class="p-2 bg-blue-500 text-white rounded-r-md hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50"
+                      >
+                        Submit
+                      </button>
+                    </div>
                   </div>
-                </div>
+                `}
               </section>
             `;
           } else {
