--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 
           React.useEffect(() => {
             (async () => {
+              if (!isAuthenticated) return;
               const bytes = CryptoJS.AES.decrypt(encryptedToken, secretKey);
               setOctokit(
                 new Octokit({
@@ -61,7 +62,7 @@
                 })
               );
             })();
-          }, []);
+          }, [isAuthenticated]);
 
           React.useEffect(() => {
             if (!isAuthenticated) return;
